--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // routeLocator Add
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-gateway-core', version: '2.2.10.RELEASE'
 }
 
 dependencyManagement {
