--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,10 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // RouteLocator-1
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway', version: '2.2.1.RELEASE'
-    // RouteLocator-2
-    implementation group: 'com.alibaba.cloud', name: 'spring-cloud-starter-alibaba-nacos-discovery', version: '2.1.0.RELEASE'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway', version: '3.1.4'
 }
 
 dependencyManagement {
