--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ ext {
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // lombok
+    implementation 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
     // RouteLocator-1
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway', version: '3.1.4'
 }
